[package]
name = "s3-dedupe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.57.2"
aws-sdk-s3 = "0.36.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_bytes = "0.11.12"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
url = "2.4.1"
