[package]
name = "s3-dedupe"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.57.2"
aws-sdk-s3 = "0.36.0"
clap = { version = "4.4.8", features = ["derive"] }
glob = "0.3.1"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_bytes = "0.11.12"
serde_json = "1.0.108"
simple-logging = "2.0.2"
tokio = { version = "1.34.0", features = ["full"] }
url = "2.4.1"
